<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        tools:context=".ui.FormScreenFragment">

        <ImageView
            android:id="@+id/ivFondo"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="55dp"
            android:src="@drawable/fondo_coneau"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/evInst" />

        <ImageView
            android:id="@+id/evInst"
            android:layout_width="250dp"
            android:layout_height="110dp"
            android:layout_marginStart="50dp"
            android:src="@drawable/epositivaicon"
            app:layout_constraintStart_toStartOf="@id/ivFondo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/autoevaluamos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/nos_autoevaluamos"
            android:textColor="@color/gray"
            android:textSize="20dp"
            android:textStyle="bold"
            android:lines="1"
            app:layout_constraintStart_toStartOf="@id/ivFondo"
            app:layout_constraintTop_toBottomOf="@id/evInst" />

        <TextView
            android:id="@+id/seguircreciendo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/para_seguir_creciendo"
            android:textColor="@color/green"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="@id/ivFondo"
            app:layout_constraintTop_toBottomOf="@id/seguirAprendiendo" />

        <TextView
            android:id="@+id/seguirAprendiendo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/para_seguir_aprendiendo"
            android:textColor="@color/green"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="@id/ivFondo"
            app:layout_constraintTop_toBottomOf="@id/autoevaluamos" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:hint="@string/nombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivFondo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                app:hintEnabled="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastName_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/apellido"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                app:hintEnabled="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dni_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/dni"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lastName_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_DNI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="number"
                app:hintEnabled="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/e_mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dni_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                app:hintEnabled="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/SpinnerLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Carrera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_layout">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/spnCarreras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                tools:ignore="KeyboardInaccessibleWidget" />
        </com.google.android.material.textfield.TextInputLayout>


        <RadioGroup
            android:id="@+id/modalidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/SpinnerLayout"
            app:layout_constraintTop_toBottomOf="@id/SpinnerLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Modalidad:"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/Presencial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Presencial"
                android:textColor="@color/gray" />

            <RadioButton
                android:id="@+id/Distancia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="A Distancia"
                android:textColor="@color/gray" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_jugar"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/green"
            android:text="@string/jugar"
            app:layout_constraintBottom_toTopOf="@id/edpos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/modalidad" />

        <ImageView
            android:id="@+id/edpos"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/educacionpositiva"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/siglo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_jugar" />

        <ImageView
            android:id="@+id/siglo"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/sigloxxi"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/edpos"
            app:layout_constraintTop_toBottomOf="@id/btn_jugar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>